--- a/src/main/resources/assets/chocolotl/lang/en_us.json
+++ b/src/main/resources/assets/chocolotl/lang/en_us.json
@@ -1,3 +1,4 @@
 {
-  "item.chocolotl.cocoa_powder": "Cocoa Powder"
+  "item.chocolotl.cocoa_powder": "Cocoa Powder",
+  "block.chocolotl.chocolate_cake": "Chocolate Cake"
 }
