Added Brown Sugar, Molasses Bucket and relevant crafting recipes -lotl

--- a/src/main/resources/assets/chocolotl/lang/en_us.json
+++ b/src/main/resources/assets/chocolotl/lang/en_us.json
@@ -1,4 +1,6 @@
 {
   "item.chocolotl.cocoa_powder": "Cocoa Powder",
+  "item.chocolotl.brown_sugar": "Brown Sugar",
+  "item.chocolotl.molasses_bucket": "Molasses Bucket",
   "block.chocolotl.chocolate_cake": "Chocolate Cake"
 }
