--- a/src/main/resources/assets/chocolotl/lang/en_us.json
+++ b/src/main/resources/assets/chocolotl/lang/en_us.json
@@ -2,5 +2,6 @@
   "item.chocolotl.cocoa_powder": "Cocoa Powder",
   "item.chocolotl.brown_sugar": "Brown Sugar",
   "item.chocolotl.molasses_bucket": "Molasses Bucket",
+  "item.chocolotl.hazelnut": "Hazelnut",
   "block.chocolotl.chocolate_cake": "Chocolate Cake"
 }
