Added roasted hazelnuts cooked from hazelnuts -lotl

--- a/src/main/resources/assets/chocolotl/lang/en_us.json
+++ b/src/main/resources/assets/chocolotl/lang/en_us.json
@@ -3,5 +3,6 @@
   "item.chocolotl.brown_sugar": "Brown Sugar",
   "item.chocolotl.molasses_bucket": "Molasses Bucket",
   "item.chocolotl.hazelnut": "Hazelnut",
+  "item.chocolotl.roasted_hazelnut": "Roasted Hazelnut",
   "block.chocolotl.chocolate_cake": "Chocolate Cake"
 }
