Added Cocoa Liquor and Cocoa Butter -lotl

--- a/src/main/resources/assets/chocolotl/lang/en_us.json
+++ b/src/main/resources/assets/chocolotl/lang/en_us.json
@@ -1,4 +1,6 @@
 {
+  "item.chocolotl.cocoa_liquor": "Cocoa Liquor",
+  "item.chocolotl.cocoa_butter": "Cocoa Butter",
   "item.chocolotl.cocoa_powder": "Cocoa Powder",
   "item.chocolotl.brown_sugar": "Brown Sugar",
   "item.chocolotl.molasses_bucket": "Molasses Bucket",
