--- a/src/main/resources/assets/chocolotl/lang/en_us.json
+++ b/src/main/resources/assets/chocolotl/lang/en_us.json
@@ -6,5 +6,7 @@
   "item.chocolotl.molasses_bucket": "Molasses Bucket",
   "item.chocolotl.hazelnut": "Hazelnut",
   "item.chocolotl.roasted_hazelnut": "Roasted Hazelnut",
-  "block.chocolotl.chocolate_cake": "Chocolate Cake"
+  "block.chocolotl.chocolate_cake": "Chocolate Cake",
+  "block.tempering_machine": "Tempering Machine",
+  "container.tempering_machine": "Tempering Machine"
 }
