Added milk powder -lotl

--- a/src/main/resources/assets/chocolotl/lang/en_us.json
+++ b/src/main/resources/assets/chocolotl/lang/en_us.json
@@ -3,6 +3,7 @@
   "item.chocolotl.cocoa_butter": "Cocoa Butter",
   "item.chocolotl.cocoa_powder": "Cocoa Powder",
   "item.chocolotl.brown_sugar": "Brown Sugar",
+  "item.chocolotl.milk_powder": "Milk Powder",
   "item.chocolotl.molasses_bucket": "Molasses Bucket",
   "item.chocolotl.hazelnut": "Hazelnut",
   "item.chocolotl.roasted_hazelnut": "Roasted Hazelnut",
